--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
+  "homepage": "https://nggerber.github.io/react-portfolio/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
@@ -9,7 +10,6 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "gh-pages": "^3.1.0",
-    "homepage": "https://Nggerber.github.io/react-portfolio",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
